feat(logistics): nâng cấp toàn diện mô-đun Logistics + sửa lỗi nghiệp vụ critical
## Backend - Sửa lỗi nghiệp vụ nghiêm trọng
- fix(LogisticsService): sửa logic kiểm tra trùng vận đơn - ném DuplicateShipmentException trực tiếp thay vì trả về entity cũ (lỗi logic unreachable exception)
- fix(ShipmentRepository): sửa 3 JPQL query thống kê bị lặp cột SELECT (aggregateByProvider, aggregateFailureReasons, aggregateByRegion)
- fix(ShipmentRepository): bỏ tăng version thủ công trong softDeleteWithVersion tránh xung đột @Version Hibernate
- fix(ShipmentRepository): thêm @EntityGraph cho findAll(Specification) giải quyết N+1 khi lọc danh sách

## Backend - Thêm trạng thái SHIPPING_FAILED (Enterprise Pattern)
- feat(CustomerReturnStatus): thêm SHIPPING_FAILED với transitions RETURNING→SHIPPING_FAILED, SHIPPING_FAILED→APPROVED/CANCELLED
- feat(SupplierReturnStatus): thêm SHIPPING_FAILED với transitions SHIPPED→SHIPPING_FAILED, SHIPPING_FAILED→APPROVED/CANCELLED
- feat(CustomerReturn/SupplierReturn): thêm domain method markShippingFailed()
- feat(CustomerReturnService/SupplierReturnService): thêm service method markShippingFailed()
- feat(CustomerReturnLogisticsListener): xử lý ShipmentReturnedEvent→RECEIVED, ShipmentCancelledEvent→SHIPPING_FAILED
- feat(SupplierReturnLogisticsListener): xử lý ShipmentReturnedEvent→COMPLETED, ShipmentCancelledEvent→SHIPPING_FAILED

## Backend - Tối ưu DTO/Mapper
- refactor(ShipmentMapper): bỏ maskPhone cho Admin, thêm map shipmentTypeDisplayName/providerDisplayName
- refactor(ShipmentResponse): thêm 2 trường display name cho frontend

## Database Migration
- migration(V5): chuyển status columns sang VARCHAR cho AttributeConverter
- migration(V6): thêm cột shipment_type/customer_return_id/supplier_return_id vào shipments (MySQL stored procedure idempotent)
- feat(FlywayRepairConfig): tự động repair checksum khi startup

## Frontend - Nâng cấp 3 trang Admin
- feat(AdminLogisticsPage): thêm phân trang, badge SHIPPING_FAILED, hiển thị displayName t